--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -37,10 +37,10 @@
         android:layout_marginHorizontal="20dp"
         ></Button>
     <Button
-        android:id="@+id/btn4"
+        android:id="@+id/btnBoardgame"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="4"
+        android:text="Board Games"
         android:textSize="24sp"
         android:layout_marginTop="20dp"
         android:layout_marginHorizontal="20dp"
