Añadido padding horizontal al EditText en activity_second.xml

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,7 +9,7 @@
     <color name="button">#574280</color>
     <color name="button_selected">#403070</color>
     <color name="hint">#E8D0ED</color>
-    <color name="text">#D38BFF</color>
+    <color name="text">#310B49</color>
     <color name="bar">#B9A0E6</color>
     <color name="peso_bajo">#FAED7D</color>
     <color name="peso_normal">#7DFA82</color>
