--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -69,8 +69,9 @@
             android:layout_height="48dp"
             android:layout_weight="3"
             android:layout_margin="8dp"
+            android:paddingHorizontal="5dp"
             android:background="@color/bar"
-            android:hint=" Write message!"
+            android:hint="Write message!"
             android:textColorHint="@color/hint"
             android:textAlignment="viewStart"
             android:textSize="17sp"
