--- a/app/src/main/res/layout/activity_boardgame.xml
+++ b/app/src/main/res/layout/activity_boardgame.xml
@@ -1,50 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<LinearLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/bgapp_background_app"
-    android:orientation="vertical"
-    tools:context=".boardGamesApp.BoardgameActivity"
-    >
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="32dp"
-        android:layout_marginVertical="48dp"
-        android:text="@string/boardgames"
-        android:textAllCaps="true"
-        android:textColor="@color/white"
-        android:textSize="36sp"
-        android:textStyle="bold" />
-    <TextView
-        style="@style/BoardgamesSubtitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/categories" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvCategories"
+    tools:context=".boardGamesApp.BoardgameActivity">
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-    <TextView
-        style="@style/BoardgamesSubtitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:text="@string/games" />
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvGames"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="32dp"
-        android:layout_marginTop="16dp" />
+        android:layout_height="match_parent"
+        android:background="@color/bgapp_background_app"
+        android:orientation="vertical">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="32dp"
+            android:layout_marginVertical="48dp"
+            android:text="@string/boardgames"
+            android:textAllCaps="true"
+            android:textColor="@color/white"
+            android:textSize="36sp"
+            android:textStyle="bold" />
+        <TextView
+            style="@style/BoardgamesSubtitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/categories" />
 
-
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvCategories"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+        <TextView
+            style="@style/BoardgamesSubtitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:text="@string/games" />
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvGames"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="32dp"
+            android:layout_marginTop="16dp" />
+    </LinearLayout>
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/fabAddGame"
             android:layout_width="wrap_content"
@@ -52,12 +51,10 @@
             android:layout_gravity="end|bottom"
             android:layout_marginEnd="16dp"
             android:src="@android:drawable/ic_input_add"
-            android:contentDescription="Añade un juego"
+            android:contentDescription="Add a game"
             app:backgroundTint="@color/bgapp_accent"
             app:tint="@color/white"
             app:fabSize="mini"
             />
+</FrameLayout>
 
-
-
-</LinearLayout>
