--- a/app/src/main/res/layout/dialog_game.xml
+++ b/app/src/main/res/layout/dialog_game.xml
@@ -24,38 +24,38 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:buttonTint="@color/bgapp_cooperative_category"
-            android:checked="true"
+            android:checked="false"
             android:text="@string/dialog_cooperative_category"
             android:textColor="@color/white" />
         <RadioButton
             android:id="@+id/rbDeckbuilding"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:buttonTint="@color/bgapp_cooperative_category"
-            android:checked="true"
+            android:buttonTint="@color/bgapp_deckbuilding_category"
+            android:checked="false"
             android:text="@string/dialog_deckbuilding_category"
             android:textColor="@color/white" />
         <RadioButton
             android:id="@+id/rbEuro"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:buttonTint="@color/bgapp_cooperative_category"
-            android:checked="true"
+            android:buttonTint="@color/bgapp_euro_category"
+            android:checked="false"
             android:text="@string/dialog_euro_category"
             android:textColor="@color/white" />
         <RadioButton
             android:id="@+id/rbLCG"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:buttonTint="@color/bgapp_cooperative_category"
-            android:checked="true"
+            android:buttonTint="@color/bgapp_lcg_category"
+            android:checked="false"
             android:text="@string/dialog_LCG_category"
             android:textColor="@color/white" />
         <RadioButton
             android:id="@+id/rbLegacy"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:buttonTint="@color/bgapp_cooperative_category"
+            android:buttonTint="@color/bgapp_legacy_category"
             android:checked="true"
             android:text="@string/dialog_legacy_category"
             android:textColor="@color/white" />
