--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -34,4 +34,15 @@
     <color name="bgapp_cooperative_category">#D016F1</color>
     <color name="bgapp_legacy_category">#EDF351</color>
 
+    <color name="v_color1_20">#33FFE149</color>
+    <color name="v_color2_35">#59A33926</color>
+    <color name="v_color3_50">#80A39D26</color>
+    <color name="v_color4_65">#A64D64D5</color>
+    <color name="v_color5_80">#CCE15B43</color>
+
+    <color name="h_color1_20">#33CD4026</color>
+    <color name="h_color2_50">#80B86C5E</color>
+    <color name="h_color3_80">#CC601B0F</color>
+
+
 </resources>
