--- a/app/src/main/res/layout/activity_color_palette.xml
+++ b/app/src/main/res/layout/activity_color_palette.xml
@@ -1,13 +1,105 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="colorPalette.colorPalette">
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvCategories"
+    tools:context="colorPalette.ColorPalette"
+    >
+    <!-- LAYOUT PARA ENCABEZADO Y RECYCLERVIEW -->
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        >
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:backgroundTint="@color/bgapp_background_app">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="COLOR PALETTE"
+            android:textColor="@color/white"
+            android:textSize="40dp"
+            android:layout_gravity="center"
+            android:textStyle="bold">
+        </TextView>
+    </androidx.cardview.widget.CardView>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvVerticalColors"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="40dp"
+        android:layout_marginTop="100dp"/>
+    </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <!-- LAYOUT PARA CARDVIEWS Y BOTÓN -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:padding="40dp"
+            android:layout_marginTop="100dp">
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cvHorizontalColor1"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        app:cardBackgroundColor="@color/v_color1_20"
+        app:cardCornerRadius="16dp"
+        android:layout_marginVertical="20dp"
+        ><TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/h1_20"
+                android:layout_gravity="start|top"
+                style="bold"
+                ></TextView>
+
+    </androidx.cardview.widget.CardView>
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cvHorizontalColor2"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            app:cardBackgroundColor="@color/v_color1_20"
+            app:cardCornerRadius="16dp"
+            android:layout_marginVertical="20dp"
+            ><TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/h2_50"
+            android:layout_gravity="start|top"
+            style="bold"
+            ></TextView>
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cvHorizontalColor3"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            app:cardBackgroundColor="@color/v_color1_20"
+            app:cardCornerRadius="16dp"
+            android:layout_marginVertical="20dp"
+            ><TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/h3_80"
+            android:layout_gravity="start|top"
+            style="bold"
+            ></TextView>
+
+        </androidx.cardview.widget.CardView>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="40dp"
+        android:text="CHANGE COLOR"
+        app:layout_constraintBottom_toBottomOf="@+id/rvVerticalColors"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        </Button>
+    </LinearLayout>
+</FrameLayout>
