--- a/app/src/main/res/layout/activity_color_palette.xml
+++ b/app/src/main/res/layout/activity_color_palette.xml
@@ -12,6 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        android:background="@color/white"
         >
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -33,6 +34,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="6"
+        android:layout_marginBottom="100dp"
         android:padding="40dp" />
     </LinearLayout>
 
@@ -49,13 +51,13 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             app:cardBackgroundColor="@color/h_color1_20"
-            app:cardCornerRadius="16dp"
             android:layout_marginVertical="20dp"
             ><TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/h1_20"
-                android:layout_gravity="start|top"
+                android:background="@color/black"
+                android:layout_gravity="start|center"
                 style="bold"
             ></TextView>
 
@@ -66,13 +68,13 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             app:cardBackgroundColor="@color/h_color2_50"
-            app:cardCornerRadius="16dp"
             android:layout_marginVertical="20dp"
             ><TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/h2_50"
-                android:layout_gravity="start|top"
+                android:background="@color/black"
+                android:layout_gravity="start|center"
                 style="bold"
             ></TextView>
         </androidx.cardview.widget.CardView>
@@ -83,21 +85,22 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             app:cardBackgroundColor="@color/h_color3_80"
-            app:cardCornerRadius="16dp"
             android:layout_marginVertical="20dp"
             ><TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/h3_80"
-                android:layout_gravity="start|top"
+                android:background="@color/black"
+                android:layout_gravity="start|center"
                 style="bold"
             ></TextView>
         </androidx.cardview.widget.CardView>
 
         <Button
+            android:id="@+id/btnChangeColor"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_weight="0.5"
             android:layout_marginTop="40dp"
             android:text="CHANGE COLOR">
         </Button>
