--- a/app/src/main/res/layout/activity_color_palette.xml
+++ b/app/src/main/res/layout/activity_color_palette.xml
@@ -56,6 +56,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/h1_20"
+                android:textColor="@color/white"
                 android:background="@color/black"
                 android:layout_gravity="start|center"
                 style="bold"
@@ -73,6 +74,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/h2_50"
+                android:textColor="@color/white"
                 android:background="@color/black"
                 android:layout_gravity="start|center"
                 style="bold"
@@ -90,6 +92,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/h3_80"
+                android:textColor="@color/white"
                 android:background="@color/black"
                 android:layout_gravity="start|center"
                 style="bold"
