--- a/app/src/main/res/layout/activity_color_palette.xml
+++ b/app/src/main/res/layout/activity_color_palette.xml
@@ -50,7 +50,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            app:cardBackgroundColor="@color/h_color1_20"
+            app:cardBackgroundColor="@color/red20"
             android:layout_marginVertical="20dp"
             ><TextView
                 android:layout_width="wrap_content"
@@ -68,7 +68,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            app:cardBackgroundColor="@color/h_color2_50"
+            app:cardBackgroundColor="@color/green50"
             android:layout_marginVertical="20dp"
             ><TextView
                 android:layout_width="wrap_content"
@@ -86,7 +86,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            app:cardBackgroundColor="@color/h_color3_80"
+            app:cardBackgroundColor="@color/blue80"
             android:layout_marginVertical="20dp"
             ><TextView
                 android:layout_width="wrap_content"
