--- a/app/src/main/res/layout/activity_rv_simple.xml
+++ b/app/src/main/res/layout/activity_rv_simple.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="recyclerViewSimple.RvSimple">
+    tools:context=".recyclerViewSimple.RvSimple">
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvEjemplo"
         android:layout_width="300dp"
