--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -46,10 +46,18 @@
         android:layout_marginHorizontal="20dp"
         ></Button>
     <Button
-        android:id="@+id/btn5"
+        android:id="@+id/btnColorPalette"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="5"
+        android:text="Color Palette"
+        android:textSize="24sp"
+        android:layout_marginTop="20dp"
+        android:layout_marginHorizontal="20dp"
+        ></Button><Button
+        android:id="@+id/btnRvSimple"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Simple RecyclerView"
         android:textSize="24sp"
         android:layout_marginTop="20dp"
         android:layout_marginHorizontal="20dp"
