--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -53,7 +53,8 @@
         android:textSize="24sp"
         android:layout_marginTop="20dp"
         android:layout_marginHorizontal="20dp"
-        ></Button><Button
+        ></Button>
+    <Button
         android:id="@+id/btnRvSimple"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -62,4 +63,15 @@
         android:layout_marginTop="20dp"
         android:layout_marginHorizontal="20dp"
         ></Button>
+    <Button
+        android:id="@+id/btnSuperHero"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="SuperHeroApp"
+        android:textSize="24sp"
+        android:layout_marginTop="20dp"
+        android:layout_marginHorizontal="20dp"
+        ></Button>
+
+
 </LinearLayout>
