Implementado botón para la app "videogamesAPI" en el menú principal y cambios efectuados en la app

--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -72,6 +72,14 @@
         android:layout_marginTop="20dp"
         android:layout_marginHorizontal="20dp"
         ></Button>
-
+    <Button
+        android:id="@+id/btnVideogames"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="VideogamesApp"
+        android:textSize="24sp"
+        android:layout_marginTop="20dp"
+        android:layout_marginHorizontal="20dp"
+        ></Button>
 
 </LinearLayout>
