--- a/app/src/main/res/layout/activity_videogames_main.xml
+++ b/app/src/main/res/layout/activity_videogames_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".animalesAPI.AnimalesMainActivity">
+    tools:context=".videogamesAPI.VideogamesMainActivity">
     <androidx.appcompat.widget.SearchView
         android:id="@+id/searchView"
         android:layout_width="match_parent"
@@ -13,7 +13,7 @@
         app:layout_constraintTop_toTopOf="parent">
     </androidx.appcompat.widget.SearchView>
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvAnimals"
+        android:id="@+id/rvVideogames"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="80dp"
