--- a/app/src/main/res/layout/activity_videogames_main.xml
+++ b/app/src/main/res/layout/activity_videogames_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".videogamesAPI.VideogamesMainActivity">
     <androidx.appcompat.widget.SearchView
-        android:id="@+id/searchView"
+        android:id="@+id/searchViewVideogames"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:iconifiedByDefault="false"
@@ -17,13 +17,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="80dp"
-        app:layout_constraintTop_toBottomOf="@id/searchView"
+        app:layout_constraintTop_toBottomOf="@id/searchViewVideogames"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
     </androidx.recyclerview.widget.RecyclerView>
     <ProgressBar
-        android:id="@+id/progressBar"
+        android:id="@+id/progressBarVideogames"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="gone"
