--- a/app/src/main/res/layout/activity_videogames_main.xml
+++ b/app/src/main/res/layout/activity_videogames_main.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".videogamesAPI.VideogamesMainActivity">
@@ -12,16 +13,27 @@
         app:iconifiedByDefault="false"
         app:layout_constraintTop_toTopOf="parent">
     </androidx.appcompat.widget.SearchView>
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvVideogames"
+    <LinearLayout
+        android:id="@+id/relativelayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="80dp"
+        android:orientation="vertical"
         app:layout_constraintTop_toBottomOf="@id/searchViewVideogames"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvVideogames"
+        android:scrollbars="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="80dp"
+        >
+        <!--
+        android:scrollbar:"horizontal"
+        android:orientation="horizontal"-->
     </androidx.recyclerview.widget.RecyclerView>
+    </LinearLayout>
     <ProgressBar
         android:id="@+id/progressBarVideogames"
         android:layout_width="wrap_content"
