Iniciado nuevo proyecto "Settings"

--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -81,5 +81,14 @@
         android:layout_marginTop="20dp"
         android:layout_marginHorizontal="20dp"
         ></Button>
+    <Button
+        android:id="@+id/btnSettings"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Settings"
+        android:textSize="24sp"
+        android:layout_marginTop="20dp"
+        android:layout_marginHorizontal="20dp"
+        ></Button>
 
 </LinearLayout>
