--- a/app/src/main/res/layout/item_videogame.xml
+++ b/app/src/main/res/layout/item_videogame.xml
@@ -14,12 +14,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop" />
-    <LinearLayout
+    <GridLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="bottom"
-        android:layout_marginTop="90dp"
-        android:orientation="vertical"
+        android:layout_height="wrap_content"
         android:layout_gravity="top">
         <TextView
             android:id="@+id/tvVideogames"
@@ -30,6 +27,15 @@
             android:textColor="@color/white"
             android:textSize="20sp"
             tools:text="VIDEOJUEGO" />
+    </GridLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="bottom"
+        android:layout_marginTop="90dp"
+        android:orientation="vertical"
+        android:layout_gravity="top">
+
         <TextView
             android:id="@+id/tvRating"
             android:layout_width="match_parent"
